# anymouse

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.optimized  LICENSE  LICENSE.md  README.md  config.sample.json  deploy.sh  iam-policies.yaml  load_test.py  monitoring.yaml  pyproject.toml  requirements.txt  run_performance_tests.sh  samconfig.toml  setup-alerts.sh  template.yaml  test-deployment.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml  pr-checks.yml
anymouse/: __init__.py  anonymize.py  config.py  deanonymize.py  lambda_handler.py
docs/: Anymouse edge and corner case examples.md  Codex-Ready Project Checklist.md  Project-Structure.md  REQUIREMENTS.md
tests/: test_anonymize.py  test_config.py  test_lambda_handler.py  test_text.py
tests/integration/: __init__.py  test_aws_integration.py
